fixed inconsistence in API field naming
