# connector/swagger/medco-connector.yml
@@ -394,14 +394,14 @@ parameters:
     schema:
       type: "object"
       properties:
-        patientSetID:
+        queryID:
           type: "integer"
         creationDate:
           type: "string"
         updateDate:
           type: "string"
       required:
-        - patientSetID
+        - queryID
         - creationDate
         - updateDate
   
@@ -950,6 +950,8 @@ definitions:
         type: "array"
         items:
           type: "string"
+      queryID:
+        type: "integer"
       patientSetID:
         type: "integer"
       timers:
